Pump to version 0.5.0 - Miror fix for price list - ignore firebase files

--- a/projects/bang-gia/src/index.html
+++ b/projects/bang-gia/src/index.html
@@ -1,14 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
+
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>BangGia</title>
+  <meta name="robots" content="index,follow">
+  <meta name="revisit-after" content="1 days">
+  <meta name="author" content="Chop Tr @choptr" />
+  <meta name="copyright" content="Copyright (c) 2018-present Chop Tr" />
+  <title>Bảng Giá - Kênh Tin Tức Nhà và Xe</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-123875149-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-123875149-1');
+  </script>
+
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1">
+  <link rel="icon"
+    type="image/x-icon"
+    href="/favicon.jpg">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
